<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icon_order"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_inventory"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_icon_sales"
            android:title="@string/nav_inventory" />
        <item
            android:id="@+id/nav_journey"
            android:icon="@drawable/icon_merchant"
            android:title="@string/nav_journey" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_icon_delivery"
            android:title="@string/nav_payment" />

      <!--  <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_icon_sales"
            android:title="@string/nav_route"
            app:actionViewClass="android.widget.TextView" />-->

        <!--<item-->
            <!--android:id="@+id/nav_sales"-->
            <!--android:icon="@drawable/ic_icon_sales"-->
            <!--android:title="@string/nav_sales"-->
            <!--app:actionViewClass="android.widget.TextView" />-->

        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_icon_collection"
            android:title="@string/nav_data" />

        <item
            android:id="@+id/nav_print"
            android:icon="@drawable/ic_icon_collection"
            android:title="@string/nav_print" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_icon_collection"
            android:title="@string/nav_settings" />
    </group>

    <!--<item android:title="Other">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:title="@string/nav_share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_rate"-->
                <!--android:title="@string/nav_rate" />-->
            <!--<item-->
                <!--android:id="@+id/nav_your_suggestions"-->
                <!--android:title="@string/your_suggestions" />-->

        <!--</menu>-->
    <!--</item>-->

</menu>
